# claude-yolo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: gilfoyle.md
.github/workflows/: ci.yml  publish.yml
cloudflared/: .gitignore  README.md
config/: .pre-commit-config.yaml  .tmux.conf  init.sh
config/git/hooks/: pre-commit
docs/: commands.md  customization.md  quickstart.md  troubleshooting.md  vpn-setup.md
openvpn/: .gitignore
proxy/: README.md
proxy/scripts/: log_requests.py
scripts/: setup-project-safety.sh
src/claude_yolo/: __init__.py  checkout.py  cli.py  init.py  lifecycle.py  logs.py  update.py  utils.py  vpn.py
src/claude_yolo/templates/: .env.example  Dockerfile  docker-compose.mcp.yml  docker-compose.yml
src/claude_yolo/templates/config/: gitignore.template  init.sh
src/claude_yolo/templates/config/git/hooks/: pre-commit  pre-push
src/claude_yolo/templates/hooks/: post-build.sh  pre-build.sh  pre-start.sh
src/claude_yolo/templates/openvpn/: README.md
src/claude_yolo/templates/proxy/scripts/: log_requests.py
src/claude_yolo/templates/scripts/: setup-project-safety.sh
src/claude_yolo/templates/webterminal/: README.md
tailscale/: README.md
tests/: __init__.py  test_checkout.py  test_cli.py  test_init.py  test_integration.py  test_lifecycle.py  test_logs.py  test_vpn.py
